--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -196,3 +196,92 @@
         }
     }
 }
+
+@media (min-width: 1200px) {
+    .open-menu {
+        overflow: initial;
+
+        #header {
+            .overlay {
+                display: none;
+            }
+            .logo {
+                width: 100px;
+                top: 17px;
+                right: calc(100vw - 150px);
+            }
+        }
+    }
+
+    #header {
+        height: 100px;
+
+        .italy {
+            top: 100px;
+        }
+
+        .logo {
+            width: 100px;
+            top: 17px;
+            right: calc(100vw - 150px);
+        }
+
+        #btn-open, #btn-close {
+            display: none;
+        }
+
+        .menu {
+            right: initial;
+            position: static;
+            background-color: initial;
+            width: 100%;
+            height: 100px;
+            flex-direction: row;
+            margin-left: 250px;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 0;
+
+            .btn-register {
+                margin: 0;
+                margin-right: 30px;
+                width: 200px;
+            }
+
+            nav {
+                width: 100%;
+                ul {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    margin-top: 0;
+
+                    li {
+                        a {
+                            font-size: 22px;
+                            min-width: 120px;
+                            padding: 10px 0;
+                            text-align: center;
+
+                            &:hover {
+                                color: var(--black);
+                            }
+                        }
+                    }
+                }
+            }
+
+            .footer {
+                width: initial;
+                justify-content: center;
+
+                hr {
+                    display: none;
+                }
+                > div {
+                    height: 100px;
+                }
+            }
+        }
+    }
+}
