--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -137,29 +137,7 @@
         .btn-register {
             margin: 20px;
             width: calc(300px - 40px);
-            min-width: 130px;
-            border: none;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 16px;
-            font-weight: bold;
-            text-transform: uppercase;
-            text-decoration: none;
-            outline: none;
-            cursor: pointer;
-            background-color: var(--green);
-            color: var(--white);
-            border-radius: 6px;
-
-            &:hover {
-                background-color: var(--green-hover);
-            }
-
-            &:active {
-                background-color: var(--green-active);
-            }
+            @include button-green;
         }
     }
     button {
