--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,7 @@
   --danger-color: #721C24;
   --space: 20px;
   --border-radius: 5px;
+  --space: 20px;
 }
 
 * {
@@ -94,6 +95,9 @@ body {
   margin: 0;
   flex-direction: column;
   background-color: var(--bg-color);
+}
+body > main {
+  min-height: calc(100vh - 247px);
 }
 
 hr.divider {
@@ -355,6 +359,78 @@ hr.divider {
   #header .menu .footer > div {
     height: 100px;
   }
+}
+#footer {
+  width: 100%;
+  min-width: 320px;
+  background-color: var(--dark-0);
+  position: relative;
+  flex-direction: column;
+  padding: var(--space);
+  align-items: center;
+  color: var(--gray-0);
+}
+#footer button {
+  position: absolute;
+  right: var(--space);
+  background-color: var(--gray-6);
+  box-shadow: var(--black) 0 3px 6px;
+  border: none;
+  border-radius: 50%;
+  height: 70px;
+  width: 70px;
+  outline: none;
+  justify-content: center;
+  align-items: center;
+  top: -35px;
+  z-index: 1;
+  cursor: pointer;
+}
+#footer button:hover {
+  background-color: var(--white);
+}
+#footer .columns {
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+#footer .columns .links {
+  display: none;
+}
+#footer .columns ul {
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  flex-direction: column;
+}
+#footer .columns ul li {
+  list-style: none;
+  font-size: 16px;
+  padding: 0.5em 0;
+}
+#footer .columns ul li a {
+  color: var(--gray-0);
+  text-decoration: none;
+}
+#footer .columns ul li.title {
+  font-weight: bold;
+  font-size: 20px;
+}
+#footer .columns ul li.social {
+  align-items: center;
+}
+#footer .columns ul li.social a {
+  margin-left: 1em;
+}
+#footer .columns ul li.social img {
+  height: 24px;
+}
+#footer .columns .logo {
+  margin: var(--space) 0;
+}
+#footer p {
+  font-weight: bold;
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=main.css.map */
