--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -14,6 +14,10 @@ body {
     margin: 0;
     flex-direction: column;
     background-color: var(--bg-color);
+
+    > main {
+        min-height: calc(100vh - 247px);
+    }
 }
 
 hr {
