--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -78,3 +78,29 @@
         font-size: 18px;
     }
 }
+
+@media (min-width: 1200px) {
+    #footer {
+        padding-left: 100px;
+        padding-right: 100px;
+        padding-bottom: 0;
+
+        .columns {
+            flex-direction: row;
+            justify-content: space-between;
+            .links {
+                display: flex;
+            }
+
+            ul {
+                li {
+                    a {
+                        &:hover {
+                            color: var(--white);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
