--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,5 +2,8 @@
 @import 'variables.scss';
 @import 'default.scss';
 @import 'mixin.scss';
+@import 'page.scss';
+@import 'toast.scss';
+@import 'form.scss';
 @import 'header.scss';
 @import 'footer.scss';
