--- a/assets/sass/page.scss
+++ b/assets/sass/page.scss
@@ -24,7 +24,6 @@ header {
     flex-direction: column;
     height: calc(100vh - 140px);
     overflow: auto;
-    margin-bottom: 80px;
 
     .page-title {
         margin: var(--space);
@@ -38,6 +37,7 @@ header {
         color: var(--white);
         justify-content: center;
         align-items: center;
+        margin-top: 18px;
 
         h1 {
             font-size: 23px;
@@ -46,6 +46,7 @@ header {
         }
     }
     > main {
+        margin-bottom: 80px;
         flex-direction: column;
 
         .toast {
@@ -78,5 +79,18 @@ header {
         button[type="submit"], a.black {
             @include button-black
         } 
+    }
+}
+
+@media (min-width: 1200px) {
+    .page {
+        > header {
+            justify-content: flex-start;
+            min-height: 160px;
+            padding-left: 185px;
+            h1 {
+                font-size: 32px;
+            }
+        }
     }
 }
