--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,5 +5,6 @@
 @import 'page.scss';
 @import 'toast.scss';
 @import 'form.scss';
+@import 'calendar.scss';
 @import 'header.scss';
 @import 'footer.scss';
