--- a/assets/sass/page.scss
+++ b/assets/sass/page.scss
@@ -80,6 +80,27 @@ header {
             @include button-black
         } 
     }
+    &.blue {
+        > header {
+            background-color: var(--blue);
+        }
+        footer.fixed {
+            button[type=submit], a.black {
+                @include button-blue
+            } 
+        }
+    }
+
+    &.green {
+        > header {
+            background-color: var(--green);
+        }
+        footer.fixed {
+            button[type=submit], a.black {
+                @include button-green
+            } 
+        }
+    }
 }
 
 @media (min-width: 1200px) {
@@ -90,6 +111,21 @@ header {
             padding-left: 185px;
             h1 {
                 font-size: 32px;
+            }
+        }
+        footer.fixed {
+            justify-content: flex-start;
+
+            button + button, a + button, a + a, button + a {
+                margin-left: var(--space);
+            }
+
+            button, a {
+                order: 1;
+
+                &:first-child {
+                    order: 2;
+                }
             }
         }
     }
