--- a/assets/sass/contact.scss
+++ b/assets/sass/contact.scss
@@ -55,3 +55,49 @@
         }
     }
 }
+
+@media (min-width: 992px) {
+    #contact {
+        h2 {
+            font-size: 60px;
+        }
+        > section {
+            flex-direction: row;
+            form, #map {
+                flex: 1;
+            }
+            form {
+                max-width: unset;
+                textarea {
+                    min-height: 245px;
+                    resize: vertical;
+                }
+            }
+            #map {
+                margin-left: 0;
+                height: 570px;
+            }
+        }
+        .contacts {
+            flex-direction: row;
+            li {
+                margin-right: var(--space);
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    #contact {
+        > section {
+            form {
+                textarea {
+                    min-height: 245px;
+                }
+            }
+        }
+    }
+}
