--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -6,7 +6,7 @@
     font-weight: 400;
 }
 
-body, div, article, aside, footer, header, main, nav, section, ul, ol, li, div, nav, button, figure, picture{
+body, div, article, aside, footer, header, main, nav, section, ul, ol, li, div, nav, button, figure, picture, form {
     display: flex;
 }
 
