--- a/assets/sass/fonts.scss
+++ b/assets/sass/fonts.scss
@@ -28,7 +28,7 @@
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Nothing';
     src: local("Nothing You Could Do"), url("../fonts/NothingYouCouldDo-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: 300;
