--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -65,11 +65,23 @@
     }
 }
 
-
 @media (min-width: 576px) {
     #home {
         .gallery {
             flex-direction: row;
+        }
+        > header {
+            ul {
+                display: flex;
+                color: var(--white);
+                font-size: 30px;
+                margin: 0;
+                width: 440px;
+                justify-content: space-around;
+            }
+            h1 {
+                margin-top: unset;
+            }
         }
     }
 }
