--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,10 +1,11 @@
 @import 'fonts.scss';
 @import 'variables.scss';
 @import 'default.scss';
+@import 'loading.scss';
 @import 'mixin.scss';
-@import 'page.scss';
 @import 'toast.scss';
 @import 'form.scss';
+@import 'page.scss';
 @import 'calendar.scss';
 @import 'header.scss';
 @import 'footer.scss';
@@ -12,3 +13,12 @@
 @import 'home.scss';
 @import 'services.scss';
 @import 'contact.scss';
+@import 'error.scss';
+@import 'auth.scss';
+@import 'change-photo.scss';
+@import 'change-password.scss';
+@import 'schedules.scss';
+@import 'schedules-time-options.scss';
+@import 'schedules-services.scss';
+@import 'schedules-payment.scss';
+@import 'schedules-success.scss';
