--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: var(--gray-5);
     position: relative;
-    z-index: 3;
+    z-index: 5;
     height: 60px;
 
     .italy {
@@ -24,7 +24,7 @@
         top: 15px;
         width: 72px;
         right: calc(50vw - 36px);
-        z-index: 5;
+        z-index: 7;
     }
 
     .menu {
@@ -36,7 +36,7 @@
         position: fixed;
         right: -300px;
         top: 0;
-        z-index: 4;
+        z-index: 6;
         flex-direction: column;
         justify-content: space-between;
 
@@ -76,9 +76,11 @@
             ul {
                 margin: 0;
                 padding: 0;
-                margin-top: 249px;
+                margin-top: 169px;
                 width: 100%;
                 flex-direction: column;
+                max-height: calc(100vh - 250px);
+                overflow: auto;
 
                 li {
                     padding: 14px 0;
@@ -164,7 +166,7 @@
             width: 100vw;
             height: 100vh;
             background-color: var(--dark-1);
-            z-index: 4;
+            z-index: 5;
         }
         .menu {
             right: 0;
